[package]
name = "monmon"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
notify-rust = "4.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
ureq = { version = "2.9.6", features = ["json"] }

[profile.release]
opt-level = "z"
strip = true
